# Doc2Mcp

./: .env.example  .gitignore  .mcp.json  AGENTIC_README.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  EXAMPLE.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_RESULTS.md  USAGE_GUIDE.md  docker-compose.yml  mcp-config.example.json  mcp_config.json  package.json  pyproject.toml  requirements.txt  start.ps1  start.sh  test.sh  test_mcp_client.py  test_server.py  tools.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.doc2mcp_cache/: registry.json
.doc2mcp_cache/content/: 2536dd9f059d27cf.txt  731575aa6d6121be.txt  8ddcd65a7892f76c.txt
.github/workflows/: ci.yml  publish.yml
api/: Dockerfile  main.py  requirements.txt
doc2mcp/: __init__.py  cache.py  compression.py  config.py  handlers.py  server.py  sitemap_index.py
doc2mcp/agents/: __init__.py  doc_search.py
doc2mcp/fetchers/: __init__.py  local.py  web.py
doc2mcp/indexer/: __init__.py  registry.py  sitemap_parser.py  tool_generator.py
doc2mcp/llm/: __init__.py  base.py  factory.py  gemini.py  local.py  openai.py
doc2mcp/tracing/: __init__.py  phoenix.py
src/: index.ts
src/__tests__/: helpers.test.ts  integration.test.ts  openapi-parser.test.ts  schema-generator.test.ts
src/generators/: schema-generator.ts  tool-generator.ts
src/observability/: tracing.ts
src/parsers/: html-parser.ts  index.ts  markdown-parser.ts  (+1 more)
tests/: __init__.py  test_config.py  test_local_fetcher.py  test_web_fetcher.py
web/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json
(+38 files in other folders)
