[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2mcp"
version = "0.1.0"
description = "MCP server that provides tool documentation to AI agents via search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Doc2MCP Contributors" }
]
keywords = ["mcp", "documentation", "ai", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "google-genai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tracing = [
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-distro>=0.60b1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
doc2mcp = "doc2mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["doc2mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
